# IndieStudio

./: .gitignore  CMakeLists.txt  README.md  model3d.c  test.cpp  test_3d.cpp
cmake/: Findraylib.cmake
include/: Exceptions.hpp  indie.hpp
include/Engine/Audio/: AudioManager.hpp  AudioStream.hpp  Music.hpp  Sound.hpp
include/Engine/Colliders/: SquareCollider.hpp
include/Engine/Core/: Core.hpp  Cursor.hpp  Drawer.hpp  FileManager.hpp  InputKey.hpp  InputMouse.hpp  Misc.hpp  Window.hpp
include/Engine/Models/: models.hpp
include/Engine/Shapes/: Circle.hpp  CollisionChecker.hpp  Ellipse.hpp  Line.hpp  Polygone.hpp  Rectangle.hpp  Ring.hpp  Triangle.hpp
include/Engine/Text/: Text.hpp
include/Engine/Textures/: Images.hpp  Textures.hpp
include/Game/: Game.hpp  Map.hpp  Player.hpp
include/Game/Bombs/: bomb.hpp
include/Game/Menu/: BoxText.hpp  Credits.hpp  EndGame.hpp  FireWork.hpp  GameButton.hpp  MainMenu.hpp  PlayerChoice.hpp  PlayersInfo.hpp  ScreenShot.hpp  Settings.hpp
include/Game/Powerup/: Powerup.hpp
include/Game/Tools/: DirectoryReader.hpp  Utilities.hpp
ressource/3DModels/Bombs/: casual.iqm
ressource/3DModels/Map/: floor.iqm
ressource/3DModels/Zombie/: anim.iqm  zombie_guy.iqm
ressource/3DModels/bomb/: Bomb.iqm
ressource/3DModels/players/: default_player.iqm  drop_bomb_animation.iqm  walking_animation.iqm
ressource/3DModels/powerups/: invincibility.iqm  speed_down.iqm  speed_up.iqm
ressource/3DModels/walls/breakable/: breakable.iqm
ressource/maps/: map_01
src/: main.cpp
src/Engine/Audio/: AudioManager.cpp  AudioStream.cpp  Music.cpp  Sound.cpp
src/Engine/Colliders/: SquareCollider.cpp
src/Engine/Core/: Core.cpp  Cursor.cpp  Drawer.cpp  FileManager.cpp  InputKey.cpp  InputMouse.cpp  Misc.cpp  Window.cpp
src/Engine/Models/: models.cpp
src/Engine/Shapes/: Circle.cpp  CollisionChecker.cpp  Ellipse.cpp  Line.cpp  Polygone.cpp  Rectangle.cpp  Ring.cpp  Triangle.cpp
src/Engine/Text/: Text.cpp
src/Engine/Texture/: Images.cpp  Textures.cpp
src/Game/: AIPlayer.cpp  Events.cpp  Game.cpp  Map.cpp  Player.cpp
src/Game/Bombs/: Bomb.cpp
src/Game/Menu/: Credits.cpp  EndGame.cpp  MenuLoadSave.cpp  MenuScreenShot.cpp  MenuSettings.cpp  MenuWindow.cpp  PlayerChoice.cpp
src/Game/Powerup/: Powerup.cpp
src/Game/Tools/: DirectoryReader.cpp  Utilities.cpp
tests/: Test.cpp  Test.hpp
